# Todos

./: .gitignore  README.md  vercel.json
.claude/: settings.local.json
.claude/skills/fastapi-docs-assistant/assets/: pyproject.toml  requirements.txt
.claude/skills/fastapi-docs-assistant/assets/src/: config.py  dependencies.py  main.py  models.py
.claude/skills/fastapi-docs-assistant/assets/src/routers/: users.py
.claude/skills/fastapi-docs-assistant/assets/tests/: test_main.py
.specify/memory/: constitution.md
docs/: ai-workflows.md  deployment.md
fullstack-todo/: PRODUCTION.md  README.md
fullstack-todo/backend/: .dockerignore  Dockerfile  README.HF.md  README.md  main.py  pyproject.toml  run_app.py
fullstack-todo/backend/src/api/: auth_routes.py  error_handlers.py  health.py  middleware.py  task_routes.py
fullstack-todo/backend/src/config/: settings.py
fullstack-todo/backend/src/db/: migrations.py
fullstack-todo/backend/src/models/: __init__.py  auth.py  database.py  password_reset.py  task.py  task_models.py  token.py  user.py
fullstack-todo/backend/src/services/: task_service.py  user_service.py
fullstack-todo/backend/src/utils/: connection_pool.py  observability.py  rate_limiter.py  security.py  validators.py
fullstack-todo/backend/tests/: __init__.py  test_api_features.py  test_basic.py  test_endpoints.py  test_neon_compatibility.py  test_neon_db.py
fullstack-todo/backend/tests/contract/: __init__.py
fullstack-todo/backend/tests/integration/: __init__.py
fullstack-todo/backend/tests/unit/: __init__.py
fullstack-todo/chatbot_backend/: .dockerignore  .gitignore  Dockerfile  README.HF.md  README.md  pyproject.toml
fullstack-todo/chatbot_backend/scripts/: start_mcp_server.py
fullstack-todo/chatbot_backend/src/: main.py
fullstack-todo/chatbot_backend/src/chat/: agent.py  api.py
fullstack-todo/chatbot_backend/src/core/: auth.py  config.py  database.py  errors.py  input_sanitizer.py  logging.py  logging_setup.py  performance_monitor.py  rate_limiter.py
fullstack-todo/chatbot_backend/src/mcp_server/: config.py  monitoring.py  server.py  tools.py
fullstack-todo/chatbot_backend/src/models/: base.py  chat_message.py  chat_session.py  task.py  tool_invocation.py
fullstack-todo/chatbot_backend/src/services/: chat_service.py  llm_client.py  task_integration_service.py  todo_service.py
fullstack-todo/chatbot_backend/tests/: test_health.py
reports/: docker-image-optimization-report.md  final-optimization-summary.md
scripts/: build-all-images.sh  build-optimization-summary.sh  build-optimized-images.sh  build-summary.sh  check-image-sizes.sh  extract-production-package.js  final-build-status.sh  final-verification.sh  optimize-and-rebuild-images.sh  validate-deployment.sh
(+325 files in other folders)
